Fix canvas panning optimization not being applied due to incorrect `z-index` value (#154)

--- a/styles/diagram/_canvasArea.scss
+++ b/styles/diagram/_canvasArea.scss
@@ -3,7 +3,7 @@
 @use "../theme/theme";
 
 .reactodia-canvas-area {
-  --reactodia-paper-panning-overlay-z-index: zIndex.$panning-overlay;
+  --reactodia-paper-panning-overlay-z-index: #{zIndex.$panning-overlay};
 
   flex: auto;
   width: 0;
